# PDOS

./: .gitignore  PDOS_ANDROID_DISCOVERY_DEBUG_REPORT.md  PDOS_ANDROID_DISCOVERY_FIXES.md  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/pdos/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/pdos/: MainActivity.kt  PDOSApplication.kt  PDOSNative.kt  RuntimeService.kt
android/app/src/main/res/values/: strings.xml  theme.xml
android/app/src/test/java/com/example/pdos/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
runtime/: Cargo.toml
runtime/src/: api.rs  constants.rs  lib.rs  main.rs  manager.rs  state.rs
runtime/src/discovery/: discovery.rs  mod.rs
runtime/src/events/: mod.rs  runtime_event.rs
runtime/src/ffi/: android.rs
runtime/src/identity/: crypto.rs  identity.rs  mod.rs  storage.rs
runtime/src/liveness/: liveness.rs  mod.rs
runtime/src/models/: capability.rs  device_info.rs  device_type.rs  identity_info.rs  mod.rs  network_info.rs  node.rs  node_state.rs  operating_system.rs  runtime_info.rs
runtime/src/protocol/: message.rs  mod.rs
runtime/src/registry/: mod.rs  registry.rs
runtime/src/runtime/: app.rs  config.rs  context.rs  event_loop.rs  global.rs  handle.rs  mod.rs
runtime/src/security/: mod.rs
runtime/src/system/: collector.rs  mod.rs  platform.rs
runtime/src/transport/: mod.rs  transport.rs
runtime/src/utils/: time.rs
