[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
hostname = "0.4"
directories = "6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
dirs = "6"
base64 = "0.22"
sysinfo = "0.37"