[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
hostname = "0.4"
directories = "6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
dirs = "6"
base64 = "0.22"
sysinfo = "0.37"
jni = "0.21"
log = "0.4"
socket2 = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"

[lib]
name = "runtime"
crate-type = ["rlib", "cdylib"]
